@@ -1,11 +1,12 @@
-SCRIBUS 1.4.0.RC6
+SCRIBUS 1.4.0
 ----------------------------------------------
 
-1.4.0.RC6 will become the next new stable version 1.4, which will replace 1.3.3.x as the officially stable Scribus version.
+1.4.0 is the new officially stable Scribus version, released January 1 2012.
 
-While 1.4.0.RC6 is considered to be usable, you may want to keep the latest 1.3.3.14 as a fallback option. Both versions can be installed in parallel. Please be aware of the fact that files saved with 1.3.4 or any later version cannot be opened by 1.3.3.x!
+While 1.4.0 is now considered to be usable, you may want to keep the latest 1.3.3.14 as a fallback option for older documents due to some changes in layout. 
+Both versions can be installed in parallel. Please be aware of the fact that files saved with 1.3.4 or any later version cannot be opened by 1.3.3.x!
 
-If you think you have found a bug in 1.4.0.RC6, you can use the Scribus bugtracker (http://bugs.scribus.net) to make us aware of it. Please make sure that the bug hasn't been reported earlier. The bugtracker's search feature can help you to check for issues that have already been submitted.
+If you think you have found a bug in 1.4.0, you can use the Scribus bugtracker (http://bugs.scribus.net) to make us aware of it. Please make sure that the bug hasn't been reported earlier. The bugtracker's search feature can help you to check for issues that have already been submitted.
 
 Compiling from Source
 =====================
